# icu-data-youi

./: .gitignore  CMakeLists.txt  README.md  build.sh  generate_headers.rb
cmake/: Config.cmake.in
include/: minimal.icudt55l.dat.h  regular.icudt55l.dat.h
scripts/: .gitignore  repack.rb  unpack.rb
src/: generated.minimal.data1.h  minimal.cpp  minimal.icudt55l.dat.cpp  regular.cpp  regular.icudt55l.dat.cpp  smaller.cpp  smaller.h  smaller.icudt55l.dat.cpp
